Fix some spacing issues: team; mobile footer padding

--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -68,7 +68,7 @@ a.logo-title:hover {
 
 @media screen and (max-width: 768px) {
   .App {
-    padding-bottom: 330px;
+    padding-bottom: 280px;
   }
   .App-logo {
     width: 120px;
