--- a/src/components/TeamMember/TeamMember.css
+++ b/src/components/TeamMember/TeamMember.css
@@ -1,5 +1,5 @@
 .Team-Member {
-  margin-bottom: 100px;
+  margin-bottom: 60px;
   padding-left: 120px;
 }
 
